增加长按 ImageView 弹出标签的功能 PictureActivity做成全屏

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity
             android:name=".PictureActivity"
-            android:label="@string/title_activity_picture" >
+            android:label="@string/title_activity_picture"
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
         </activity>
     </application>
 
